02-Products-App/k8s/nestjs-microservicios/templates/ingress/payments-ms.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: payments-ms-ingress
spec:
  rules:
    - http:
        paths:
        - path: /*
          pathType: ImplementationSpecific
          backend:
            service:
              name: payments-ms
              port:
                number: 3000
